# cmd-parser

./: README.md  requirements.txt  setup.cfg
src/: time.py
src/option_parser/: __init__.py  _parameter_settings.py  _parsed_option.py  _parser.py  exceptions.py  option.py  option_parser.py  processed_options.py
tests/: arguments_format_test.py  arguments_positional_test.py  decorators.py  parameter_values_test.py  parser_configs_test.py  test_allowed_values.py  test_bounded.py  test_get_plain_args.py  test_help_page.py  test_parameterized.py  test_parameterless.py  test_parameters.py  test_plain.py  test_throw_on_error_false.py  test_throw_on_error_true.py  test_typed.py
