[metadata]
name = option_parser
version = 1.0
author = Dmitry Simonov, Tereza Janošová
author_email = dmitry@dmitrysimonov.com
description = CLI option parsing library developed during NPRG043 course at MFF UK.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.mff.cuni.cz/teaching/nprg043/2021-summer/task-1/t21-api-design
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
